Unify disclosure / popover handling

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1251,7 +1251,7 @@ small.search_term {
 .expandable.expanded {
   display: block; }
 
-.expandable {
+.expandable.popover {
   word-break: break-all;
   border: 1px solid #1460aa;
   border-radius: 6px;
