--- a/views/user.tt
+++ b/views/user.tt
@@ -96,7 +96,7 @@
                                 <div class="col-md-10">
                                     <select class="form-control" name="view_limits">
                                         <option></option>
-                                        [% FOREACH layout IN layouts %]
+                                        [% FOREACH layout IN instances %]
                                             [% FOREACH v IN layout.global_view_summary %]
                                                 <option value="[% v.id %]"
                                                     [% IF view_limit.view_id == v.id %]selected[% END %]>[% layout.name _ ': ' _ v.name | html_entity %]
