--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1,20 +1,3 @@
-.nav {
-  list-style: none;
-  font-size: 22px;
-  font-weight: 100; }
-
-nav .heading {
-  text-align: left;
-  color: #7276ad;
-  font-size: 1em;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 0; }
-
-nav button .heading {
-  font-size: .6em;
-  margin-bottom: .3em; }
-
 .nav > li.disabled > a {
   color: #999999; }
 
@@ -103,7 +86,6 @@ nav button .heading {
 
 .navbar-default .navbar-brand {
   color: #000000;
-  font-size: 22px;
   font-weight: 100; }
 
 .navbar-default .navbar-brand:hover, i
@@ -141,7 +123,6 @@ nav button .heading {
   color: #1460aa; }
 
 nav .dropdown-toggle {
-  font-size: 22px;
   border: 0;
   line-height: 21px;
   padding-top: 14.5px;
@@ -194,17 +175,19 @@ nav.navbar li > a.home {
 .navbar-inverse .navbar-link {
   color: #999999; }
 
-#user-navbar,
-#user-navbar .dropdown-toggle,
-#app-navbar,
-#admin-menu {
-  padding-left: 0; }
-
 #app-navbar .dropdown-toggle {
   padding-top: 0; }
 
+.navbar .navbar-collapse,
+nav .dropdown-toggle {
+  padding-left: 0; }
+
+nav .dropdown-toggle {
+  padding: 0; }
+
 .breadcrumbs {
-  padding: 0.8em 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
   border: 1px solid #ccccdd;
   background-color: #fff; }
 
@@ -219,6 +202,27 @@ nav.navbar li > a.home {
   border-bottom: 1px solid #ccc;
   padding: 0 1px 0;
   margin: 0 -1px 0; }
+
+.nav {
+  list-style: none;
+  font-weight: 100; }
+
+#app-navbar {
+  margin-top: .3em; }
+
+nav .heading {
+  text-align: left;
+  color: #7276ad;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 0;
+  font-size: 1.5rem; }
+
+nav .dropdown-toggle {
+  font-size: 1em; }
+
+nav button .heading {
+  margin-bottom: .3em; }
 
 /* a11y-related */
 .visually-hidden {
