--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -18,23 +18,6 @@
   display: block;
   clear: both; }
 
-.nav {
-  list-style: none;
-  font-size: 22px;
-  font-weight: 100; }
-
-nav .heading {
-  text-align: left;
-  color: #7276ad;
-  font-size: 1em;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 0; }
-
-nav button .heading {
-  font-size: .6em;
-  margin-bottom: .3em; }
-
 .nav > li.disabled > a {
   color: #999999; }
 
@@ -261,27 +244,29 @@ nav .dropdown-toggle {
 nav button .heading {
   margin-bottom: .3em; }
 
-/* a11y-related */
-.visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
+#skip-links ol {
+  margin: 0;
   padding: 0;
+  list-style-type: none; }
+
+#skip-links a:focus {
+  clip: auto;
+  height: auto;
+  margin: auto;
+  overflow: auto;
+  padding: initial;
   position: absolute;
-  width: 1px; }
+  width: auto;
+  opacity: 1;
+  position: absolute;
+  outline: 0;
+  top: 1em;
+  left: 1em;
+  padding: 1em;
+  border: 3px solid #1460aa;
+  background-color: #fff;
+  z-index: 2; }
 
-.visually-hidden-opacity {
-  opacity: 0; }
-
-/* general util */
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both; }
-
->>>>>>> Align top navigation
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 @font-face {
   font-family: 'Open Sans remote';
