--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1,4 +1,5 @@
 @import 'branding-colours';
+@import 'mixins';
 @import 'utility-classes';
 @import 'navigation';
 
@@ -1359,17 +1360,6 @@ small.search_term {
     position: relative;
 }
 
-
-@mixin visually-unhide {
-    clip: auto;
-    height: auto;
-    margin: auto;
-    overflow: auto;
-    padding: initial;
-    position: absolute;
-    width: auto;
-    opacity: 1;
-}
 
 [role="tooltip"]   .tooltip,
 [role="tooltip"] + .tooltip {
