Early BreadCrumb support

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -196,7 +196,8 @@ nav.navbar li > a.home {
   color: #999999; }
 
 #app-navbar .dropdown-toggle {
-  padding-top: 0; }
+  padding-top: 0;
+  margin-right: .5em; }
 
 .navbar .navbar-collapse,
 nav .dropdown-toggle {
@@ -217,11 +218,20 @@ nav .dropdown-toggle {
   list-style: none; }
 
 .breadcrumbs .item {
+  display: inline-block; }
+
+.breadcrumbs .item .separator {
+  border-right: 2px solid #ccc;
+  margin-left: .5em;
+  margin-right: .2em;
+  display: inline-block;
+  transform: rotate(25deg);
+  height: .7em; }
+
+.breadcrumbs .item a {
   color: #034575;
   text-decoration: none;
-  border-bottom: 1px solid #ccc;
-  padding: 0 1px 0;
-  margin: 0 -1px 0; }
+  border-bottom: 1px solid #ccc; }
 
 .nav {
   list-style: none;
