--- a/views/layout.tt
+++ b/views/layout.tt
@@ -29,6 +29,7 @@
                         <option value="rag" [% IF column.type == "rag" %]selected[% END %]>RedAmberGreen status (RAG)</option>
                         <option value="calc" [% IF column.type == "calc" %]selected[% END %]>Calculated value</option>
                         <option value="curval" [% IF column.type == "curval" %]selected[% END %]>Record from other data sheet</option>
+                        <option value="autocur" [% IF column.type == "autocur" %]selected[% END %]>Automatic value of other sheet's references to this one</option>
                     </select>
                 </div>
             [% END %]
@@ -92,7 +93,7 @@
                 <div class="row">
                     <div class="col-md-5">
                         <select class="form-control" id="display_field" name="display_field">
-                            [% FOREACH field in all_columns %]
+                            [% FOREACH field in layout.all %]
                                 <option value="[% field.id %]" [% IF column.display_field == field.id %]selected[% END %]>[% field.name | html_entity %]</option>
                             [% END %]
                         </select>
@@ -221,7 +222,7 @@
                 [% END %]
                 >
                 [% IF instance_layouts.size %]
-                    [% rti = column.refers_to_instance %]
+                    [% rti = column.refers_to_instance_id %]
                     <div class="form-group">
                         <label for="typeahead">Auto-complete:</label>
                         <div class="checkbox">
@@ -239,8 +240,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="refers_to_instance">Instance to select from:</label>
-                        <select class="form-control" id="refers_to_instance" name="refers_to_instance">
+                        <label for="refers_to_instance_id">Instance to select from:</label>
+                        <select class="form-control" id="refers_to_instance_id" name="refers_to_instance_id">
                             [% IF NOT rti %]
                                 <option></option>
                             [% END %]
@@ -280,6 +281,52 @@
                 [% ELSE %]
                     <div class="alert alert-info">
                         No other instances are available to select data from
+                    </div>
+                [% END %]
+            </div>
+            <div id="divautocur"
+                [% IF column.type != "autocur" %]
+                    style="display:none"
+                [% END %]
+                >
+                [% IF layout.referred_by.size %]
+                    <div class="form-group">
+                        <label for="related_field_id">Fields referring to this field:</label>
+                        <select class="form-control" id="related_field_id" name="related_field_id">
+                            [% IF NOT column.related_field_id %]
+                                <option></option>
+                            [% END %]
+                            [% FOREACH referring IN layout.referred_by %]
+                                <option data-instance_id=[% referring.instance_id %] value="[% referring.id %]" [% IF column.related_field_id == referring.id %]selected[% END %]>[% referring.name | html_entity %]</option>
+                            [% END %]
+                        </select>
+                    </div>
+                    [% FOREACH instance IN instance_layouts %]
+                        <div id="autocur_instance_[% instance.instance.id %]" class="autocur_instance"
+                            [% IF !column.refers_to_instance_id OR column.refers_to_instance_id != instance.instance.id %]
+                                style="display:none"
+                            [% END %]
+                            >
+                            <div class="form-group">
+                                <label for="curval_instance">Columns to show:</label>
+                                [% FOREACH c IN instance.layout.all %]
+                                    [% NEXT IF c.type == "curval" %]
+                                    [% checked = "" %]
+                                    [% IF instance.instance.id == column.refers_to_instance_id AND column.has_curval_field(c.id) %]
+                                        [% checked = "checked" %]
+                                    [% END %]
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="curval_field_ids" value="[% c.id %]" [% checked %]>[% c.name %]
+                                        </label>
+                                    </div>
+                                [% END %]
+                            </div>
+                        </div>
+                    [% END %]
+                [% ELSE %]
+                    <div class="alert alert-info">
+                        No other sheets refer to this sheet
                     </div>
                 [% END %]
             </div>
@@ -561,7 +608,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
         </tr>
     </thead>
     <tbody id="sortable">
-        [% FOREACH col IN all_columns %]
+        [% FOREACH col IN layout.all %]
         <tr>
             <input type="hidden" name="position" value="[% col.id %]">
             <td><a href="/layout/[% col.id %]">Edit</a></td>
@@ -689,23 +736,28 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     </div>
                 ' );
             });
-            $('#refers_to_instance').change(function(){
+            $('#refers_to_instance_id').change(function(){
                 var divid = '#instance_fields_' + $(this).val();
                 $('.instance_fields').hide();
                 $(divid).show();
+            });
+            $('#related_field_id').change(function(){
+                var divid = $(this).find(':selected').data('instance_id');
+                $('.autocur_instance').hide();
+                $('#autocur_instance_' + divid).show();
             });
             [% FOREACH instance IN instance_layouts %]
                 [% PROCESS builder.tt builder_id = instance.layout.instance_id layout = instance.layout filter_normal = column.filter filter_base64 = column.filter.base64 %]
             [% END %]
             [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') %]
                 var data = decodeBase64('[% column.filter.base64 %]');
-                $('#builder[% column.refers_to_instance %]').queryBuilder('setRules',
+                $('#builder[% column.refers_to_instance_id %]').queryBuilder('setRules',
                     JSON.parse(data)
                 );
             [% END %]
 
             $('#submit_save').click(function() {
-                var current_builder = "#builder" + $('#refers_to_instance').val();
+                var current_builder = "#builder" + $('#refers_to_instance_id').val();
                 if( $('#jstree_demo_div').length && $('#jstree_demo_div').is(":visible") ) {
                     var v =$("#jstree_demo_div").jstree(true).get_json('#', { 'flat': false });
                     var mytext = JSON.stringify(v);
@@ -733,6 +785,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divcode').hide();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').show();
@@ -742,6 +795,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divcode').hide();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').show();
@@ -752,6 +806,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divcalc').hide();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').hide();
@@ -762,6 +817,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divcalc').show();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').hide();
@@ -771,6 +827,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divenum').hide();
                     $('#divfile').show();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').show();
@@ -780,6 +837,17 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divenum').hide();
                     $('#divfile').hide();
                     $('#divcurval').show();
+                    $('#divautocur').hide();
+                    $('#divstring').hide();
+                    $('#divdate').hide();
+                    $('.noragcalc').show();
+                } else if (val == "autocur") {
+                    $('#divcode').hide();
+                    $('#divtree').hide();
+                    $('#divenum').hide();
+                    $('#divfile').hide();
+                    $('#divcurval').hide();
+                    $('#divautocur').show();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').show();
@@ -789,6 +857,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divenum').hide();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').show();
                     $('#divdate').hide();
                     $('.noragcalc').show();
@@ -798,6 +867,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divenum').hide();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').show();
                     $('.noragcalc').show();
@@ -807,6 +877,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                     $('#divcode').hide();
                     $('#divfile').hide();
                     $('#divcurval').hide();
+                    $('#divautocur').hide();
                     $('#divstring').hide();
                     $('#divdate').hide();
                     $('.noragcalc').show();
