--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -245,7 +245,7 @@ nav .dropdown-toggle {
 .breadcrumbs .items {
     margin: 0;
     padding-left: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .breadcrumbs .item {
@@ -293,7 +293,7 @@ nav button .heading {
     margin-bottom: .3em;
 }
 
-#skip-links ol {
+#skip-links {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -311,5 +311,3 @@ nav button .heading {
     background-color: #fff;
     z-index: 2;
 }
-
-
