--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -272,8 +272,28 @@ nav .dropdown-toggle {
     font-weight:100;
 }
 
-#app-navbar {
-    margin-top: .3em;
+#app-navbar .nav {
+    margin-top: .4em;
+}
+
+.navbar {
+    margin-bottom: 1em;
+}
+
+
+@media (screen and max-width:767px) {
+    .navbar {
+        margin-bottom: 0;
+    }
+
+    #app-navbar .heading {
+        margin-left: -10px;
+    }
+    
+    .navbar-nav .open .dropdown-menu {
+        margin: 0 1em;
+        border: 1px solid #ccc;
+    }
 }
 
 nav .heading {
@@ -283,6 +303,7 @@ nav .heading {
     padding: 0;
     margin-bottom: 0;
     font-size: 1.5rem;
+    font-weight: 500;
 }
 
 nav .dropdown-toggle {
@@ -311,3 +332,4 @@ nav button .heading {
     background-color: #fff;
     z-index: 2;
 }
+
