Fix floating header on data table

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -163,7 +163,7 @@
                         $('#modal_helptext').find('.modal-body').html(data);
                     })
                 });
-                $("#datatable").floatThead({
+                $("#data-table").floatThead({
                     zIndex: function($table){
                         return 999;
                     }
